syntax="proto3";
package pb;
option go_package = "./;errors";
service ProductInfo {
    rpc addProduct(Product) returns (ProductID);
    rpc getProduct(ProductID) returns (Product);
}
message Product {
    string id =1;
    string name =2;
    string description=3;
}
message ProductID{
    string value=1;
}
